{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 166,
  "lineage": "bcd78d38-f97f-6fd7-ef22-05c2b9eeaf79",
  "resources": [
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:network-acl/acl-0e77e1aff5bdcc322",
            "default_network_acl_id": "acl-0e77e1aff5bdcc322",
            "egress": [],
            "id": "acl-0e77e1aff5bdcc322",
            "ingress": [],
            "owner_id": "658251713809",
            "subnet_ids": [],
            "tags": {
              "Name": "fargate-flask-nacl-default",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-nacl-default",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:security-group/sg-053a9c2921995bc2f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-053a9c2921995bc2f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "658251713809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "$fargate-flask-sg-default",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "$fargate-flask-sg-default",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:internet-gateway/igw-0cb4b1668739dd6b9",
            "id": "igw-0cb4b1668739dd6b9",
            "owner_id": "658251713809",
            "tags": {
              "Name": "fargate-flask-vpc",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:network-acl/acl-0eab16e864f78f8dc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10010,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/20",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 11000,
                "to_port": 65535
              }
            ],
            "id": "acl-0eab16e864f78f8dc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 15000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/20",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/20",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10020,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/20",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10010,
                "to_port": 80
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10901,
                "to_port": 22
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3389,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10902,
                "to_port": 3389
              }
            ],
            "owner_id": "658251713809",
            "subnet_ids": [
              "subnet-076401ba17958c172",
              "subnet-0a88731bddf6a6695",
              "subnet-0f72e8950dbb64c3e"
            ],
            "tags": {
              "Name": "fargate-flask-vpc-private",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-private",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:network-acl/acl-0e275650afc549530",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10020,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10010,
                "to_port": 80
              }
            ],
            "id": "acl-0e275650afc549530",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 11000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10020,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10010,
                "to_port": 80
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10901,
                "to_port": 22
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3389,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10902,
                "to_port": 3389
              }
            ],
            "owner_id": "658251713809",
            "subnet_ids": [
              "subnet-085ee9f35c296a55b",
              "subnet-0bc957df8395b4b14",
              "subnet-0f42472cb9af797a9"
            ],
            "tags": {
              "Name": "fargate-flask-vpc-public",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-public",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.10.0.0/20",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3781059622",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eab16e864f78f8dc",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 10000,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.10.0.0/20",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1019788707",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eab16e864f78f8dc",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 10010,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.10.0.0/20",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2164445549",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eab16e864f78f8dc",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 10020,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3568162569",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eab16e864f78f8dc",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 10901,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 3389,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2738030073",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eab16e864f78f8dc",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 10902,
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3534277228",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eab16e864f78f8dc",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 15000,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-829103527",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eab16e864f78f8dc",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 10000,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3978240879",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eab16e864f78f8dc",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 10010,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.10.0.0/20",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-646463772",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eab16e864f78f8dc",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 11000,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-101280231",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e275650afc549530",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 10010,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3150120233",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e275650afc549530",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 10020,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4000056141",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e275650afc549530",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 10901,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 3389,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2582827453",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e275650afc549530",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 10902,
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1650748298",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e275650afc549530",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 11000,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3473025547",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e275650afc549530",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 10000,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1420256868",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e275650afc549530",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 10010,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-590984340",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e275650afc549530",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 10020,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cb4b1668739dd6b9",
            "id": "r-rtb-08def75f6781a27c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08def75f6781a27c3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:route-table/rtb-06c1881ce79b8b9bf",
            "id": "rtb-06c1881ce79b8b9bf",
            "owner_id": "658251713809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fargate-flask-vpc-private-eu-west-1a",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-private-eu-west-1a",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e715743bd052660"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:route-table/rtb-0ddb9427bcf231e9f",
            "id": "rtb-0ddb9427bcf231e9f",
            "owner_id": "658251713809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fargate-flask-vpc-private-eu-west-1b",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-private-eu-west-1b",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e715743bd052660"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:route-table/rtb-0acc7e7657e61c7dc",
            "id": "rtb-0acc7e7657e61c7dc",
            "owner_id": "658251713809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fargate-flask-vpc-private-eu-west-1c",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-private-eu-west-1c",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e715743bd052660"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:route-table/rtb-08def75f6781a27c3",
            "id": "rtb-08def75f6781a27c3",
            "owner_id": "658251713809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb4b1668739dd6b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fargate-flask-vpc-public",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-public",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e715743bd052660"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f611524ca076215a",
            "route_table_id": "rtb-06c1881ce79b8b9bf",
            "subnet_id": "subnet-0a88731bddf6a6695"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078174c19ce40ea34",
            "route_table_id": "rtb-0ddb9427bcf231e9f",
            "subnet_id": "subnet-076401ba17958c172"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc70c1080e24bd95",
            "route_table_id": "rtb-0acc7e7657e61c7dc",
            "subnet_id": "subnet-0f72e8950dbb64c3e"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c4fab8b4aa1371c",
            "route_table_id": "rtb-08def75f6781a27c3",
            "subnet_id": "subnet-085ee9f35c296a55b"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcaac88871be5083",
            "route_table_id": "rtb-08def75f6781a27c3",
            "subnet_id": "subnet-0f42472cb9af797a9"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0860d6f07055bbaa1",
            "route_table_id": "rtb-08def75f6781a27c3",
            "subnet_id": "subnet-0bc957df8395b4b14"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:subnet/subnet-0a88731bddf6a6695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.0.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a88731bddf6a6695",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658251713809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-flask-vpc-private-eu-west-1a",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-private-eu-west-1a",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:subnet/subnet-076401ba17958c172",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.2.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076401ba17958c172",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658251713809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-flask-vpc-private-eu-west-1b",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-private-eu-west-1b",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:subnet/subnet-0f72e8950dbb64c3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.4.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f72e8950dbb64c3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658251713809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-flask-vpc-private-eu-west-1c",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-private-eu-west-1c",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:subnet/subnet-085ee9f35c296a55b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.8.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085ee9f35c296a55b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658251713809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-flask-vpc-public-eu-west-1a",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-public-eu-west-1a",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:subnet/subnet-0f42472cb9af797a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.10.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f42472cb9af797a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658251713809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-flask-vpc-public-eu-west-1b",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-public-eu-west-1b",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:subnet/subnet-0bc957df8395b4b14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.12.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc957df8395b4b14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658251713809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-flask-vpc-public-eu-west-1c",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc-public-eu-west-1c",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660"
          },
          "dependencies": [
            "module.vpc.data.aws_region.current",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:vpc/vpc-05e715743bd052660",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/20",
            "default_network_acl_id": "acl-0e77e1aff5bdcc322",
            "default_route_table_id": "rtb-0380f6e8d503f13a6",
            "default_security_group_id": "sg-053a9c2921995bc2f",
            "dhcp_options_id": "dopt-ee3f0888",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e715743bd052660",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0380f6e8d503f13a6",
            "owner_id": "658251713809",
            "tags": {
              "Name": "fargate-flask-vpc",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            },
            "tags_all": {
              "Name": "fargate-flask-vpc",
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "flask-app",
              "protected": "true"
            }
          }
        }
      ]
    }
  ]
}